# AcademyConnect

./: .env.sample  Dockerfile  ReadMe.md  constans.py  coverage_report.txt  docker-compose.yaml  docs.py  payments.json  pyproject.toml
academy/: paginators.py  permissions.py  tasks.py  urls.py  validators.py  views.py
academy/models/: __init__.py  course.py  lesson.py  subscription.py
academy/serializer/: __init__.py  course.py  lesson.py  subscription.py
academy/tests/: __init__.py  base.py  test_lesson.py  test_subscription.py
app_config/: celery.py  settings.py  urls.py
payment/: models.py  serializer.py  services.py  urls.py  views.py
users/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
users/management/commands/: csu.py  cu.py
